tests/golden/err-tab-indent/expected_error.txt
error: インデントにタブは使えません
 --> main.clum:2:1
  |
2 | 	y = 2
  | ^
